--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     </head>
 
     <body>
-        <h1>content</h1>
+        <div id="root"></div>
+
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
